--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines": {      
-    "node" : "v20.17.0"
+  "engines": {
+    "node": "v20.17.0"
   },
   "name": "airbnb",
   "version": "1.0.0",
@@ -21,6 +21,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "flatpickr": "^4.6.13",
     "joi": "^18.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.17.0",
@@ -33,4 +34,3 @@
     "sweetalert2": "^11.22.3"
   }
 }
-
